fix(calendar): default trigger text alignment

--- a/packages/raystack/v1/components/calendar/calendar.module.css
+++ b/packages/raystack/v1/components/calendar/calendar.module.css
@@ -251,3 +251,7 @@
   border-radius: inherit;
   position: relative;
 }
+
+.datePickerInput {
+  text-align: left;
+}
